WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311962
[Navigation API] Fix missing return in performTraversal for unknown key
https://bugs.webkit.org/show_bug.cgi?id=311962
Summary
[Navigation API] Fix missing return in performTraversal for unknown key
Basuke Suzuki
Reported
2026-04-10 12:36:59 PDT
Navigation::performTraversal() is missing a return before createErrorResult() when !hasEntryWithKey(key). Execution falls through to code that uses moved-from DeferredPromise objects.
rdar://174513305
Attachments
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2026-04-10 13:37:41 PDT
<
rdar://problem/174513305
>
Basuke Suzuki
Comment 2
2026-04-10 13:38:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61746
Basuke Suzuki
Comment 3
2026-04-10 14:52:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62490
EWS
Comment 4
2026-04-13 21:04:05 PDT
Committed
311161@main
(4f1b310945df): <
https://commits.webkit.org/311161@main
> Reviewed commits have been landed. Closing PR #62490 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug